fixed overflow

--- a/AFMIS_Portal/src/styles/error.css
+++ b/AFMIS_Portal/src/styles/error.css
@@ -1,5 +1,5 @@
 main.error {
-  height: 78vh;
+  height: 63.8vh;
   display: flex;
   flex-direction: column;
   align-items: center;
